# Mini-GPT-rs

./: Cargo.toml  README.md
src/: data.rs  generation.rs  layers.rs  lib.rs  main.rs  model.rs  training.rs
