[package]
name = "mini-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.23.0"
anyhow = "1.0.101"
thiserror = "2.0.18"
tokenizers = "0.22.2"
reqwest = { version = "0.12.5", features = ["blocking"] }
rand = "0.8.5"
